[tool.poetry]
name = "e-learning-platform"
version = "0.1.0"
description = "An AI-powered E-Learning Platform built with Streamlit and Python"
authors = ["Sarjan P <codecrafter2005@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.25.0"

# Add other dependencies here
pandas = "^1.5.3"
numpy = "^1.23.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
